--- a/index.html
+++ b/index.html
@@ -34,13 +34,19 @@
           </div>
         </div>
 		<div class="row" style="height:10%">
-			<div class="col-8" style="height:100%">
-	    <form>
-            <input ng-model="chat.message" />
-            <button type="submit" ng-click="chat.sendMessage()" class="btn btn-primary">Send Message</button>
-	    <button ng-click="chat.logout()" class="btn btn-danger">Log Out</button>
+			<div class="col-2" style="height:100%">
+				<button class="btn btn-danger">Settings</button>
+			</div>
+			<div class="col-8" style="height:100%" >
+	    <form class="form-group row">
+            <input class="col-8 form-control" ng-model="chat.message" />
+            <button type="submit" ng-click="chat.sendMessage()" class="btn btn-primary col-2">Send Message</button>
+	    
             </form>
 				</div>
+				<div class="col-2" style="height:100%">
+					<button ng-click="chat.logout()" class="btn btn-danger">Log Out</button>
+				</div>				
 			</div>
       </div>
     </div>
