--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <div ng-controller="chatCtrl as chat">
       <div ng-hide="chat.online">
 	<div class="container">
-	<form>
-          <div class="form-group">
-	  <label for="username">Username</label>
-          <input ng-model="chat.user" class="form-control" placeholder="Username" id="username"/>
-	  <label for="password">Password</label>
-          <input type="password" ng-model="chat.pass" class="form-control" placeholder="Password" id="password" />
-	  <br />
-          <button type="submit" ng-click="chat.login()" class="btn btn-primary">Log in</button>
-          <button ng-click="chat.register()" class="btn btn-outline-primary">Register</button>
-          {{chat.error}}
-	  </div>
-	</form>
+	  <form>
+            <div class="form-group">
+	      <label for="username">Username</label>
+              <input ng-model="chat.user" class="form-control" placeholder="Username" id="username"/>
+	      <label for="password">Password</label>
+              <input type="password" ng-model="chat.pass" class="form-control" placeholder="Password" id="password" />
+	      <br />
+              <button type="submit" ng-click="chat.login()" class="btn btn-primary">Log in</button>
+              <button ng-click="chat.register()" class="btn btn-outline-primary">Register</button>
+              {{chat.error}}
+	    </div>
+          </form>
 	</div>
       </div>
       <div ng-show="chat.online" class="container-fluid">
         <div class="row" style="height:90%">
-	  <div class="col-2">
+          <div class="col-2">
             <div ng-repeat="channel in chat.channels" ng-class="chat.activechannel != channel[0] ? 'btn-outline-primary' : 'btn-primary'" ng-click="chat.activechannel = channel[0]" class="btn btn-block">
               {{channel[1]}}
             </div>
@@ -32,15 +32,15 @@
               {{"[" + message.timestamp + "] " + message.user + ": " + message.message}}
             </div>
           </div>
-			<div class="col-2" style="height:90%" id="usersBox">
-				<h5>Admins</h5>
-					<div ng-repeat="user in users | admins" >{{user[0]}}}}</div>
-				<h5>Members</h5>
-					<div ng-repeat="user in users | members" >{{user[0]}}}}</div>
+          <div class="col-2" style="height:90%" id="usersBox">
+            <h5>Admins</h5>
+            <div ng-repeat="user in chat.users[chat.activechannel] | admins" >{{user.name}}</div>
+            <h5>Members</h5>
+					<div ng-repeat="user in chat.users[chat.activechannel] | members" >{{user.name}}</div>
 				<h5>Invited</h5>
-					<div ng-repeat="user in users | invitedUsers" >{{user[0]}}}}</div>
+					<div ng-repeat="user in chat.users[chat.activechannel] | invitedUsers" >{{user.name}}</div>
 				<h5>Banned</h5>
-					<div ng-repeat="user in users | bannedUsers" >{{user[0]}}}}</div>
+					<div ng-repeat="user in chat.users[chat.activechannel] | bannedUsers" >{{user.name}}</div>
 				<form class="form-group col">
 				<input class="col-2 form-control" ng-model="chat.message" />
 				<button type="submit" ng-click="chat.inviteUser()" class="btn btn-primary col-2">Invite User</button>
