--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               {{"[" + message.timestamp + "] " + message.user + ": " + message.message}}
             </div>
           </div>
+		  
           <div class="col-2" style="height:90%" id="usersBox">
+			<div style="height:70%;overflow-y:scroll">
             <h5>Admins</h5>
             <div ng-repeat="user in chat.users[chat.activechannel] | admins" >{{user.name}}</div>
             <h5>Members</h5>
@@ -41,11 +43,19 @@
 					<div ng-repeat="user in chat.users[chat.activechannel] | invitedUsers" >{{user.name}}</div>
 				<h5>Banned</h5>
 					<div ng-repeat="user in chat.users[chat.activechannel] | bannedUsers" >{{user.name}}</div>
-				<form class="form-group col">
-				<input class="col-2 form-control" ng-model="chat.message" />
-				<button type="submit" ng-click="chat.inviteUser()" class="btn btn-primary col-2">Invite User</button>
-				<button type="submit" ng-click="chat.banUser()" class="btn btn-primary col-2">Ban User</button>
-				</form>
+			</div>		
+				<div class="row" style="height:1%"></div>	
+				<div class="row" style="height:4%"> 
+				<input ng-model="chat.message" />
+				</div>
+				<div class="row" style="height:1%"></div>
+				<div class="row"style="height:4%">
+				<button type="submit" ng-click="chat.inviteUser()" class="btn btn-primary ">Invite User</button>
+				</div>
+				<div class="row" style="height:1%"></div>
+				<div class="row" style="height:4%">
+				<button type="submit" ng-click="chat.banUser()" class="btn btn-primary ">Ban User</button>
+				</div>
 				
 			</div>
         </div>
