--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 		  <div ng-show="chat.settings">
 		  <form>
-			<input ng-model="chat.createChannel" />
+			<input ng-model="chat.createchannel" />
 			<button type="submit" ng-click="chat.createChannel()" class="btn btn-primary col-2">Create Channel</button>
 			</form>
 		  
